--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI &amp; Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Data Modeling, Data Mining, DAX, Pivot Table, VLOOKUP, ETL, HTML, CSS, VSCode, PostgreSQL,   Google Analytics, DBMS, DSA &amp; GitHub</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling, Photography, Badminton</span></li>	
+									<li class="d-flex"><span>Interest:</span> <span>Traveling, Badminton</span></li>	
 								</ul>
 							</div>
 						</div>
